# school-assistant-app

./: .env.template  Dockerfile  README.md  main_console.py  pyproject.toml  requirements.txt  streamlit_page.py  ui.py  upload_file.py
prompts/: system.yaml  thought.yaml
